Changed dynamic web application to maven project

--- a/Trinion/WebContent/css/Fileupload.css
+++ b/Trinion/WebContent/css/Fileupload.css
@@ -3,6 +3,13 @@
   overflow: hidden;
   display: inline-block;
 }
+#uploadform
+{
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
 .uploadbtn {
   border: 2px solid gray;
   color: gray;
